--- a/app/ui/dashboard/FormCandidate/FormCandidate.module.css
+++ b/app/ui/dashboard/FormCandidate/FormCandidate.module.css
@@ -1,4 +1,4 @@
-.wrapper{
+/* .wrapper{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -25,4 +25,4 @@
     padding: 10px;
     border-radius: 10px;
     width: max-content;
-  }
+  } */
