--- a/app/ui/dashboard/pagination/pagination.module.css
+++ b/app/ui/dashboard/pagination/pagination.module.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -11,4 +11,4 @@
 
 .button:disabled{
   cursor: not-allowed;
-}
+} */
